<resources>
    <string name="app_name">Budget It</string>
    <string name="budget_summary_activity">Budget Summary</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="buckets">Buckets</string>
    <string name="accounts">Accounts</string>
    <string name="transactions">Transactions</string>

    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="update">Update</string>

    <string name="create_account">Create Account</string>
    <string name="update_account">Update Account</string>
    <string name="confirm_account_deletion_label">Deleting %1$s</string>
    <string name="confirm_account_deletion">Are you sure you want to delete this account?</string>
    <string name="delete_account_confirmation_message">The account was deleted.</string>

    <string name="enter_name">Enter Name</string>
    <string name="enter_description">Enter Description</string>

    <string name="create_transaction">Create Transaction</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="confirm_transaction_deletion_label">Deleting %1$s</string>
    <string name="confirm_transaction_deletion">Are you sure you want to delete this transaction?</string>
    <string name="delete_transaction_confirmation_message">The transaction was deleted.</string>

    <string name="enter_payee">Enter Payee</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="calculated_monthly_amount">Calculated Monthly Amt.</string>
    <string name="calculated_yearly_amount">Calculated Yearly Amt.</string>
    <string name="account_funds_coming_from">Account Funding Coming From</string>
    <string name="account_funds_going_to">Account Funding Going To</string>
    <string name="enter_comment">Enter Comment</string>

    <string name="create_bucket">Create Bucket</string>
    <string name="update_bucket">Update Bucket</string>
    <string name="read_bucket_monthly">Monthly Total: $%1$,.2f</string>
    <string name="read_bucket_yearly">Yearly Total: $%1$,.2f</string>
    <string name="confirm_bucket_deletion_label">Deleting %1$s</string>
    <string name="confirm_bucket_deletion">Are you sure you want to delete this bucket?</string>
    <string name="delete_bucket_confirmation_message">The bucket was deleted.</string>

    <string name="manage_buckets">Manage Buckets</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="manage_transactions">Manage Transactions</string>

    <string name="yes_label">Yes</string>
    <string name="no_label">No</string>

    <string name="format_money">$%1$,.2f</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="transaction_hint">Transaction Type</string>
    <!--  Transaction Types  -->
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>

    <string name="frequency_hint">Frequency Type</string>
    <!--  Frequency Types  -->
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="bi_monthly_other">Bi-Monthly (Other)</string>
    <string name="bi_monthly_2x">Bi-Monthly (2x)</string>
    <string name="tri_monthly_other">Tri-Monthly (Other)</string>
    <string name="tri_monthly_3x">Tri-Monthly (3x)</string>
    <string name="weekly">Weekly</string>
    <string name="bi_weekly_other">Bi-Weekly (Other)</string>
    <string name="bi_weekly_2x">Bi-Weekly (2x)</string>

    <string name="bucket_hint">Bucket Type</string>

    <string name="col_id">ID</string>
    <string name="col_name">Name</string>
    <string name="col_monthly_amount">Monthly Amount</string>
    <string name="col_yearly_amount">Yearly Amount</string>
    <string name="col_monthly_expense_amount">Monthly Expense Amount</string>
    <string name="col_monthly_income_amount">Monthly Income Amount</string>
    <string name="col_yearly_expense_amount">Yearly Expense Amount</string>
    <string name="col_yearly_income_amount">Yearly Income Amount</string>
</resources>