<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myapplication.models.transaction.ManageTransactionActivity">
    <item
        android:id="@+id/action_buckets"
        android:orderInCategory="100"
        android:title="@string/manage_buckets"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="150"
        android:title="@string/manage_accounts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_transactions"
        android:orderInCategory="200"
        android:title="@string/manage_transactions"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="225"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="1000"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>