<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".models.transaction.CreateUpdateTransactionFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:text="@string/create_transaction"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextPayee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="payee"
            android:ems="10"
            android:hint="@string/enter_payee"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/editTextFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPayee"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:prompt="@string/frequency_hint"
            android:spinnerMode="dialog" />

        <Spinner
            android:id="@+id/editTextTransactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPayee"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:prompt="@string/transaction_hint"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextFrequency"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="amount"
            android:ems="10"
            android:hint="@string/enter_amount"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/editTextBucket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextAmount"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:prompt="@string/bucket_hint"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/monthlyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/calculated_monthly_amount"
            android:layout_below="@+id/editTextBucket"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@id/amountMonthly"/>

        <EditText
            android:id="@+id/amountMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/calculated_monthly_amount"
            android:layout_below="@+id/editTextBucket"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/yearlyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:text="@string/calculated_yearly_amount"
            android:layout_below="@+id/amountMonthly"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@id/amountYearly" />

        <EditText
            android:id="@+id/amountYearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:ems="10"
            android:inputType="none"
            android:focusable="false"
            android:hint="@string/calculated_yearly_amount"
            android:layout_below="@+id/amountMonthly"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/fromAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_funds_coming_from"
            android:layout_below="@+id/amountYearly"/>

        <Spinner
            android:id="@+id/editFromAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/fromAccountLabel"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/toAccountLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/account_funds_going_to"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/editFromAccount"/>

        <Spinner
            android:id="@+id/editToAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/toAccountLabel"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="none"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/enter_comment"
            android:inputType="textMultiLine"
            android:layout_below="@+id/editToAccount" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/navigationButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:layout_below="@+id/editTextComment">

            <View
                android:id="@+id/buttonDivider"
                android:layout_width="1dp"
                android:layout_height="50dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:text="@string/cancel"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonDivider" />

            <Button
                android:id="@+id/createEditButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:text="@string/create"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonDivider"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</ScrollView>